--- a/plikd.cfg
+++ b/plikd.cfg
@@ -2,17 +2,16 @@
 host = "0.0.0.0"
 port = 8080
 
-[DataBackend]
-type = "rclone"
+DataBackend = "rclone"   # <- string, pas table
 
 [DataBackendConfig]
-remote = "mega:PlikUploads"
+Remote = "mega:PlikUploads"
 
 [MetadataBackendConfig]
-driver = "sqlite3"
-connectionString = "plik.db"
-debug = false
+Driver = "sqlite3"
+ConnectionString = "plik.db"
+Debug = false
 
 [WebApp]
-noWebInterface = false
+NoWebInterface = true
 
