--- a/plikd.cfg
+++ b/plikd.cfg
@@ -2,7 +2,7 @@
 host = "0.0.0.0"
 port = 8080
 
-DataBackend = "rclone"   # <- string, pas table
+DataBackend = "rclone"
 
 [DataBackendConfig]
 Remote = "mega:PlikUploads"
@@ -14,4 +14,3 @@ Debug = false
 
 [WebApp]
 NoWebInterface = true
-
