--- a/plikd.cfg
+++ b/plikd.cfg
@@ -2,7 +2,7 @@
 host = "0.0.0.0"
 
 port = 8080
-backend_type = rclonem
+backend_type = "rclonem"
 backend_path = mega:PlikUploads
 
 DataBackend = "rclone"
