--- a/plikd.cfg
+++ b/plikd.cfg
@@ -1,6 +1,8 @@
 [server]
 host = "0.0.0.0"
 port = 8080
+backend_type = "rclone"
+backend_path = "mega:PlikUploads"
 
 DataBackend = "rclone"
 
@@ -10,6 +12,7 @@ Remote = "mega:PlikUploads"
 [MetadataBackendConfig]
 Driver = "sqlite3"
 ConnectionString = "plik.db"
+Debug = false
 
 [WebApp]
 NoWebInterface = false
